<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:layout_gravity="top|end"
    android:keepScreenOn="true"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="250dp"
    android:layout_height="100dp"
    android:id="@+id/chart"
    android:orientation="vertical"
    android:layout_gravity="center"/>
    
    <Button 
        android:id="@+id/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_start"
        
        
        />
       
	    <ViewFlipper 
	        android:id="@+id/flipper1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:flipInterval="1000"
	        android:inAnimation="@android:anim/slide_in_left"
	        android:outAnimation="@android:anim/slide_out_right"
	        
	        >
	        
	        <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="400dp"
	            android:layout_gravity="center_horizontal"
	            android:alpha="0.5"
	            android:background="#00BBFF"
	            android:contentDescription="@string/str_img1"
	            android:src="@drawable/img1" />
	        
	        <ImageView 
	            android:src="@drawable/img2"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/str_img2"
	            android:layout_gravity="center_horizontal"
	            android:alpha="0.5"
	            android:background="#00BBFF"
	            />
	        
	        <ImageView 
	            android:src="@drawable/img3"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/str_img3"
	            android:layout_gravity="center_horizontal"
	            android:alpha="0.5"
	            android:background="#00BBFF"
	            />
	        
	        <ImageView 
	            android:src="@drawable/img4"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/str_img4"
	            android:layout_gravity="center_horizontal"
	            android:alpha="0.5"
	            android:background="#00BBFF"
	            />
	        
	        <ImageView 
	            android:src="@drawable/img5"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/str_img5"
	            android:layout_gravity="center_horizontal"
	            android:alpha="0.5"
	            android:background="#00BBFF"
	            />

	        
	    </ViewFlipper>	    
    

</RelativeLayout>